--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1,4 +1,6 @@
-= KiwiPics
+= KiwiPics / AWS Amplify
+
+== SUMMARY
 
 I am James Woolley, and I created this website for my final project for CSCI90: Cloud Services, Infrastructure, and Computing. This is a photo gallery for uploading pictures of everyone's favorite flightless bird the Kiwi. I spent 6 months working in New Zealand. And I thought it would be fun to theme my project on that trip.
 
@@ -16,18 +18,25 @@ These are the steps for deploying your site.
 
 An optional step is to purchase your own domain. I chose Cloudflare, however, you could purchase directly from Route53.
 
-- Create your Cloudflare account.
-- Add payment details in Profile
-- Within Account home, click "buy a domain".
-- Search for your domain.
-- Complete purchase.
+* Create your Cloudflare account.
+** Add payment details in Profile.
+* Within Account home, click "buy a domain".
+* Search for your domain.
+* Complete purchase.
 
 === Github
 
-You'll want to identify the Amplify repository you wish to deploy. We will be cloning my repository, but I chose to use an AWS template instead.
+You'll want to identify the Amplify repository you wish to deploy. We will be cloning my repository, but I chose to use an AWS template instead. See: https://docs.aws.amazon.com/amplify/latest/userguide/setting-up-GitHub-access.html
 
-- Select the repository.
-- Fork the repository. Make note of this repository.
+* Create a GitHub account if you don’t already have one.
+* Create the Repository on GitHub
+** Go to the repository I have created. https://github.com/jgwoolley/kiwipics
+** Click the dropdown on fork, click Create Fork.
+** In the new window, give the repository whatever values you want. Although we have forked the repository, my screenshots will assume I am using the original project.
+** On the page for your project, click the dropdown on Code, then copy the SSH url. 
+* Download the Repository
+** For the sake of this tutorial, I will assume you have git installed on you’re development machine, and that you are properly authenticated. See GitHub’s guide: https://github.com/git-guides/install-git.
+** Take your SSH value (ex. git@github.com:jgwoolley/kiwipics.git) and type the following into your terminal `git clone git@github.com:jgwoolley/kiwipics.git`.
 
 === AWS Amplify
 
@@ -47,18 +56,20 @@ In these steps we will be getting the main Amplify services up and running.
 ** You should be prompted with DNS entries you will need to enter in CloudFlare.
 *** Name server records are "NS" type. Specify @ for the name, and the value as the Nameserver.
 ** Select Amplify managed certificate.
+* Confirm AWS Amplify App has been deployed.
+** Open AWS Amplify in Console
+** Select your app.
+** Select your branch main. Eventually, you should see the most recent deployment have a status of “Deployed”
 
 === IAM Identity Center
 
-In order to make any changes to the repository, it would be nice to deploy a test version of the stack. In order to do this, you will need to create an IAM Identity Center User.
-
-See: https://docs.amplify.aws/react/start/account-setup/
+In order to make any changes to the repository, it would be nice to deploy a test version of the stack. In order to do this, you will need to create an IAM Identity Center User. See: https://docs.amplify.aws/react/start/account-setup/
 
 * Within IAM Identity Center
 ** Confirm "Current AWS Region" is correct.
 ** Click enable.
-* Open CloudShell
-** Copy the following line in as is. It will prompt you to type in a value to be saved to the user_email variable.
+* Open CloudShell, confirm AWS Region is correct.
+** Copy the following line in as is. It will prompt you to type in a value to be saved to the user_email variable. This should be the email of the person you want testing your application.
 ```
 read -p "Enter email address: " user_email # hit enter
 ```
@@ -77,25 +88,34 @@ accountId=$(aws sts get-caller-identity | jq '.Account' -r)
 aws sso-admin create-account-assignment --instance-arn $ssoArn --target-id $accountId --target-type AWS_ACCOUNT --permission-set-arn $permissionSetArn --principal-type USER --principal-id $userId
 # Hit enter
 ```
-* Open IAM Identity Center confirm your "amplify-admin" account is there.
-* Reset that user's password.
+* Open IAM Identity Center.
+* Confirm your "amplify-admin" account is there.
+* Open that user.
+* Click the Reset password field. Follow the prompts.
 
 == Developer Machine
 
 In order to develop, I believe you need a GUI based environment to do the SSO signin.
 
-* Install NodeJS
-** To grab all the dependencies you need, run: `npm install`
-* Install AWS CLI
-** `aws sso login`
-* You will need to boot up the backend by running: `npx ampx sandbox`
-** Open up Amplify and wait until your sandbox is up and running.
-*** Open Amplify in AWS Console.
-*** Select your app.
-*** Select managed sandboxes.
-*** Check if the status says "Deployed", if it has failed you can check the logs to figure out the issue.
-* You then can deploy your local development environment with: `npm run dev`. This will have its own completely independent users and data.
-* When you have a change to commit, and push it. AWS Amplify should deploy the site for you automatically.
+* AWS CLI
+** Further steps will assume the AWS CLI is installed on the target machine. If you need help, go to the offical documentation: https://docs.aws.amazon.com/cli/latest/userguide/getting-started-install.html.
+** Run the following command in your terminal: `aws sso login`.
+** A browser tab should open up which will prompt you to sign into your IAM Identity Center account.
+* NodeJS
+** Further steps will assume NodeJS is assumed to be installed on the target machine. If you need help, go to the offical documentation: https://nodejs.org/en/download.
+** Within your Git repository folder, to grab all the dependencies you need, run: `npm install`.
+** You will need to boot up the backend by running: `npx ampx sandbox`.
+*** Confirm your Amplify sandbox environment is running.
+**** Open Amplify in AWS Console.
+**** Select your app.
+**** Select managed sandboxes.
+**** Check if the status says "Deployed", if it has failed you can check the logs to figure out the issue.
+** You then can deploy your local development environment with: `npm run dev`. This will have its own completely independent users and data.
+
+NOTE: If you ever delete your backend sandbox, you will need to redeploy the frontend.
+
+* When you have a change to commit, and push it. 
+* Confirm your changes have been deployed by AWS Amplify. This should have taken place once GitHub recieved your changes.
 ** Open Amplify in AWS Console.
 ** Select your app.
 ** Check your branch and its status. If the status says "Deployed", if it has failed you can check the logs to figure out the issue. Your latest succesfull build will still be deployed to AWS.
